--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Temple Run Game</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="index.css" />
 </head>
 <body>
   <div id="game">
@@ -31,6 +31,6 @@
     </audio>
   </div>
 
-  <script src="game.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
